Make sure footer logos align properly

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -162,11 +162,11 @@ footer{
             width: 115px;
         }
         .cfa_logo{
-            background: url('/static/img/cfa_logo.png') no-repeat 0 9px;
+            background: url('/static/img/cfa_logo.png') no-repeat 0 8px;
             height: 50px;
         }
         .cfa_logo:hover{
-            background-position-y: -41px;
+            background-position-y: -45px;
         }
         .new_urban{
             background: url('/static/img/new_urban.png') no-repeat 0 5px;
